<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="337dp"
        android:layout_height="508dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="Avatar"
            android:src="@drawable/avatar1"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_completo"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_o_nome"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtVwEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_o_email"
            android:inputType="textShortMessage|textWebEmailAddress"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/digite_o_telefone"
            android:inputType="textAutoCorrect|number|phone"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/confirmar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>